--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,3 +2,4 @@
 <% @tasks.each do |tasks| %>
   <h2><%= link_to tasks.title, show_task_path(tasks)  %></h2>
 <% end %>
+<%= link_to "Add new task", new_task_path  %>
