--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,3 +2,4 @@
 <p><%= @tasks.details %></p>
 <p><%= @tasks.completed %></p>
 <%= link_to "volver al listado", task_path  %>
+<%= link_to "Editar tarea", edit_task_path  %>
